<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:background="@drawable/bg_saver_for_ins">
        <TextView
            android:id="@+id/tv_step_first"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copy_link"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">
            <com.hochan.tumlodr.ui.component.SquareImageView
                android:id="@+id/iv_tip"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"/>
            <ProgressBar
                android:visibility="invisible"
                android:id="@+id/loading_progress_bar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/tv_download_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textSize="12sp"
                android:layout_gravity="bottom|right"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:visibility="invisible"
                tools:visibility="visible"
                tools:text="3"
                android:background="#20000000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_parse_fail"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/parse_fail"
                android:visibility="invisible"
                android:layout_gravity="center"/>
        </FrameLayout>

        <TextView
            android:id="@+id/tv_step_second"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_this_app"/>
    </LinearLayout>
</layout>