<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:cardBackgroundColor="@color/colorOrange"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/ll_root_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/delete_download_task_fragment_title"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:textStyle="bold"/>

                <FrameLayout
                    android:id="@+id/fl_content_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">
                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#30ffffff"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_delete"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:text="@string/delete_download_file_fragment_delete"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"/>

                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="#30ffffff"/>

                    <Button
                        android:id="@+id/btn_cancle"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:text="@string/delete_download_task_grament_cancel"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </FrameLayout>

</layout>
